# ai-incident-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260317_0001_initial_schema.py
docs/: api.md  architecture.md  data-model.md  decisions.md  development.md  infrastructure.md  modules.md  python-structure.md  runbook.md  testing.md  workflow.md
helm/ai-incident-copilot/: Chart.yaml  values.yaml
helm/ai-incident-copilot/templates/: _helpers.tpl  api-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  migration-job.yaml  secret.yaml  service.yaml  worker-deployment.yaml
k8s/: api-deployment.yaml  configmap.yaml  hpa-api.yaml  ingress.yaml  migration-job.yaml  secret.yaml  service.yaml  worker-deployment.yaml
src/ai_incident_copilot/: __init__.py  main.py  worker_main.py
src/ai_incident_copilot/api/: __init__.py  dependencies.py  errors.py  middleware.py
src/ai_incident_copilot/api/routers/: __init__.py  health.py  incidents.py
src/ai_incident_copilot/api/schemas/: __init__.py  common.py  health.py  incidents.py
src/ai_incident_copilot/application/: __init__.py
src/ai_incident_copilot/application/services/: __init__.py  in_memory_incident_service.py  incident_service.py
src/ai_incident_copilot/application/workflows/: __init__.py  rule_based.py  service.py  state.py
src/ai_incident_copilot/core/: __init__.py  config.py  logging.py
src/ai_incident_copilot/db/: __init__.py  base.py  models.py  session.py
src/ai_incident_copilot/db/repositories/: __init__.py  audit.py  events.py  incidents.py  workflows.py
src/ai_incident_copilot/domain/: __init__.py  enums.py
src/ai_incident_copilot/events/: __init__.py  consumer.py  kafka.py  schemas.py
src/ai_incident_copilot/workers/: __init__.py  incident_analysis_worker.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_worker_flow.py
tests/unit/: test_entrypoints.py  test_incident_service.py  test_kafka_components.py  test_rule_based_workflow.py  test_workflow_service.py
